# recorder

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
core/: api-interface.cpp  app-profile.cpp  app.cpp  app.h  audio-encoders.cpp  core.cmake  defines.h  output.cpp  output.h  platform.h  preview.cpp  preview.h  qt-display.h  scene-source.cpp  scene-source.h  source-preview.cpp  source-preview.h  ui.cpp  ui.h  utils.cpp  utils.h  websocket.cpp  websocket.h
corebridge/: CMakeLists.txt  app.h  defines.h  output.cpp  output.h  platform-windows.cpp  preview.cpp  preview.h  qt-display.cpp  scene-source.cpp  source-preview.cpp  ui.cpp  ui.h  utils.cpp  win-dll-blocklist.c
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  SourceDuplicatorWindow.cpp  SourceDuplicatorWindow.h  SourceDuplicatorWindow.ui  api-interface.cpp  audio-encoders.cpp  audio-encoders.hpp  main.cpp  obs-app.cpp  obs-app.hpp  obs-source-manager.cpp  obs-source-manager.h  obs-sources.cpp  obs-sources.h  platform-windows.cpp  platform.hpp  qt-display.cpp  qt-display.hpp  window-basic-main-outputs.cpp  window-basic-main-outputs.hpp  window-basic-main-profiles.cpp  window-basic-preview.cpp  window-basic-preview.hpp  window-main.hpp
test/: SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui  TestMainWindow.cpp  TestMainWindow.h  TestMainWindow.ui  main.cpp  test.h
websocket/: websocket-session.h  websocket.cpp
